# freelance_crm

./: .gitignore  pyproject.toml
